FIX: Fix issue between Java 17 and Gson.